src/test/deca/codegen/valid/InitModMoinsInit.deca
// Description:
//    tests simple de modulo
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/01/2017
{
  int x = 2;
  int y = 3;
	print(y%(-x));
}
