src/test/deca/codegen/invalid/NoInitModNoInit.deca
// Description:
//    modulo sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
int x;
int y;
print(x % y);
}
